--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&family=Source+Sans+Pro:wght@300&display=swap');
+.container {
+  position: fixed;
+  top:0;
+  color : white;
+  font-family : Roboto;
+  width : 100%;
+  z-index: 100;
+ 
+}
+video{
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  margin : auto;
+  width:100%;
+  height : auto;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container *{
+  margin : 0;
+  padding : 0;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.city {
+  font-size : 1.5rem;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.main {
+  font-size: 0.75rem;
 }
-
-.App-link {
-  color: #61dafb;
+.main-temp {
+  font-size : 3.5rem;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main-temp::after {
+  content: '\00B0';
+  
+}
+span {
+  display: inline-block;
+  margin : 0 5px;
+}
+span::after {
+  content : '\00B0';
 }
