--- a/src/App.css
+++ b/src/App.css
@@ -1,44 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&family=Source+Sans+Pro:wght@300&display=swap');
-.container {
-  position: fixed;
-  top:0;
-  color : white;
-  font-family : Roboto;
-  width : 100%;
-  z-index: 100;
- 
-}
-video{
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  margin : auto;
-  width:100%;
-  height : auto;
-  
-}
-
-.container *{
-  margin : 0;
-  padding : 0;
-}
-.city {
-  font-size : 1.5rem;
-}
-.main {
-  font-size: 0.75rem;
-}
-.main-temp {
-  font-size : 3.5rem;
-}
-.main-temp::after {
-  content: '\00B0';
-  
-}
-span {
-  display: inline-block;
-  margin : 0 5px;
-}
-span::after {
-  content : '\00B0';
+.nav {
+  margin-bottom : 50px;
 }
